--- a/src/app/files/preview-file/style.less
+++ b/src/app/files/preview-file/style.less
@@ -13,7 +13,7 @@
             width: 900px;
         }
     }
-    
+
     .modal-dialog{
         height: 100%;
         width: 94%;
@@ -41,8 +41,8 @@
             right: 14px;
             top: 65px;
             img{
-                height: 100%;
-                width: 70%;
+                max-height: 100%;
+                max-width: 80%;
             }
         }
         .txt-preview{
@@ -144,7 +144,7 @@
           }
           }
         }
-        
+
         .version{
             position: absolute;
             top: 36px;
@@ -174,7 +174,7 @@
                 }
             }
         }
-        
+
         .disc-inputbox{
           bottom: 0;
           height: 160px;
