--- a/src/link-share/main/preview-file/style.less
+++ b/src/link-share/main/preview-file/style.less
@@ -11,7 +11,7 @@
             width: 900px;
         }
     }
-    
+
     .modal-dialog{
         height: 90%;
         width: 90%;
@@ -32,10 +32,10 @@
             position: absolute;
             right: 14px;
             top: 40px;
-            img{
-                height: 100%;
-                width: 70%;
-            }
+//          img{
+//              height: 100%;
+//              width: 70%;
+//          }
         }
         .txt-preview{
             word-break: break-all;
@@ -71,7 +71,7 @@
         height: 100%;
         .nav-sidebar{
             .ver{
-              margin-left: 15px;  
+              margin-left: 15px;
             }
             li{
                float: left;
@@ -108,7 +108,7 @@
           }
           }
         }
-        
+
         .version{
             position: absolute;
             top: 30px;
@@ -135,7 +135,7 @@
                 }
             }
         }
-        
+
         .disc-inputbox{
           bottom: 0;
           height: 100px;
