--- a/src/app/files/invite-team-users/style.less
+++ b/src/app/files/invite-team-users/style.less
@@ -64,7 +64,7 @@
             }
 
             @media screen and (-webkit-min-device-pixel-ratio:0) {
-              span.caret {
+              .invite-team-users .invite-form .dropdown button span.caret {
                 float: right;/* Chrome 4 */
                 margin-top: 8px;/* Chrome 4 */
                 margin-left:0px;/* Chrome 4 */
@@ -72,7 +72,7 @@
             }
 
             @-moz-document url-prefix() {
-              span.caret {
+              .invite-team-users .invite-form .dropdown button span.caret {
                 float: right;/* Firefox 4 */
                 margin-top: -10px;/* Firefox 4 */
                 margin-left:0px;/* Firefox 4 */
